[releng]working on a tycho-maven build.